--- a/SDFtools/templates/profile.html
+++ b/SDFtools/templates/profile.html
@@ -3,6 +3,8 @@
 
 
 {% block maincontent %}
-  <h1>It worked!!</h1>
+  <h1>Hello {{ user.full_name }}</h1>
+
+    This is were you will review info about you and update, fix, add.
 
 {% endblock %}
