--- a/SDFtools/templates/alert.html
+++ b/SDFtools/templates/alert.html
@@ -4,10 +4,20 @@
 
 
 {% block maincontent %}
+    <div class="row">
+        <div class="col-md-4">
   <h1>Send Message</h1>
     <form method="POST" action="/submit">
     {{ form.hidden_tag() }}
     {{ form.msg.label }} {{ form.msg(size=20) }}
     <input type="submit" value="Go">
 </form>
+        </div>
+    <ul class="list-group col-md-2" >
+    <li class="list-group-item activ">Subscribers</li>
+    {%- for item in subscriptions.ListSubscriptionsByTopicResponse.ListSubscriptionsByTopicResult.Subscriptions recursive -%}
+    <li class="list-group-item">{{ item.Endpoint }}</li>
+    {%- endfor -%}
+    </ul>
+    </div>
 {% endblock %}
