--- a/SDFtools/templates/base.html
+++ b/SDFtools/templates/base.html
@@ -49,11 +49,12 @@
                   </ul >
 
                    <ul class="list-group" >
+                <li class="list-group-item"><img class="img-responsive center-block" src={{ weather.icon_url_base ~ weather.icon_url_name }}></li>
                 <li class="list-group-item"><span class="badge">{{ weather.station_id }}</span>Station ID:</li>
-                <li class="list-group-item"><span class="badge">{{ weather.weather }}</span>Weather: <img src={{ weather.icon_url_base ~ weather.icon_url_name }}></li>
+                <li class="list-group-item"><span class="badge">{{ weather.weather }}</span>Weather: </li>
                 <li class="list-group-item"><span class="badge">{{ weather.wind_mph }} MPH</span>wind:</li>
                 <li class="list-group-item"><span class="badge">{{ weather.wind_dir }}</span>Wind Direction:</li>
-                <li class="list-group-item"><span class="badge">{{ weather.temp_f }} MPH</span>Temp F:</li>
+                <li class="list-group-item"><span class="badge">{{ weather.temp_f }}</span>Temp F:</li>
                 <li class="list-group-item"><span class="badge">{{ weather.dewpoint_f }}</span>Dewpont F:</li>
                 <li class="list-group-item"><span class="badge">{{ weather.relative_humidity }} </span>Relative Humidity:</li>
            </ul>
