--- a/SDFtools/templates/missions.html
+++ b/SDFtools/templates/missions.html
@@ -24,6 +24,9 @@
             <td>
                 <li class="list-group-item">{{ mission.DESCRIPTION.S }}</li>
             </td>
+            <td>
+                <li class="list-group-item"><a href="{{ urls[loop.index0] }}">Orders</a></li>
+            </td>
         </tr>
 
 
