--- a/SDFtools/static/main.css
+++ b/SDFtools/static/main.css
@@ -111,3 +111,11 @@ body {
 .logoimg {
     height: 250px;
 }
+
+
+#map-canvas {
+    height: 400px;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+}
