--- a/SDFtools/templates/settings.html
+++ b/SDFtools/templates/settings.html
@@ -6,7 +6,7 @@
   <h1>Settings</h1>
 
     Custom settings will be here
-    <h2>{{ user.custom_data['wx'] }}</h2>
+    <h2>{{ user }}</h2>
     <div class="container-fluid" >
         <form role="form" method="POST" action="/settings/submit">
             <div class="form-group">
